# Shopping-Bot

./: .gitignore  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/prompts/: build-mvp.prompt.md
.github/workflows/: ci.yml  release-desktop.yml
apps/api/: .env.example  .eslintrc.json  README.md  package-lock.json  package.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/alerts/: alerts.controller.ts  alerts.module.ts  alerts.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  webauthn.service.spec.ts  webauthn.service.ts
apps/api/src/billing/: billing.controller.ts  billing.service.spec.ts  billing.service.ts
apps/api/src/users/: users.controller.ts  users.service.ts
apps/api/src/watchers/: watchers.controller.ts  (+3 more)
apps/desktop/: README.md  index.html  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  README.md  next.config.js  package.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/lib/: api.ts  auth-context.tsx  webauthn.ts
apps/web/public/: robots.txt
apps/worker/: .env.example  .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
apps/worker/prisma/: schema.prisma
apps/worker/src/: index.ts
docs/: CODE_SIGNING.md  SERVER_SETUP.md  USER_GUIDE.md
infra/: docker-compose.yml
(+34 files in other folders)
